--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -5,10 +5,12 @@
 	https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
 	<modelVersion>4.0.0</modelVersion>
+	<packaging>war</packaging>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.3.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	
@@ -16,7 +18,7 @@
 	<artifactId>service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>service</name>
-	<description>Demo project for jax-rs and incurance core itegration</description>
+	<description>Demo project for jax-rs and insurance core integration</description>
 
 	<properties>
 		<java.version>8</java.version>
