--- a/Service/pom.xml
+++ b/Service/pom.xml
@@ -20,15 +20,16 @@
 	<name>service</name>
 	<description>Demo project for jax-rs and insurance core integration</description>
 
-	<properties>
-		<java.version>8</java.version>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jersey</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,6 +42,21 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!--dependency>
+		    <groupId>org.powermock</groupId>
+		    <artifactId>powermock-module-junit4</artifactId>
+		    <version>2.0.0-beta.5</version>
+		    <scope>test</scope>
+		</dependency-->
+		
+		<dependency>
+		    <groupId>org.powermock</groupId>
+		    <artifactId>powermock-api-mockito2</artifactId>
+		    <version>2.0.0-beta.5</version>
+		    <scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
